# django-project-one

./: pyproject.toml
backend/: permissions.py  settings.py  urls.py
philosophers/: models.py  serializers.py  urls.py  views.py
philosophers/migrations/: 0001_initial.py  0002_rename_philosophers_philosopher.py
philosophy/: admin.py  models.py  serializers.py  urls.py  views.py
philosophy/migrations/: 0001_initial.py  0002_philosophy_philosopher.py
